==> OlegDemk/5.FreeRTOS_STM32F407VG_SPI_LCD/Core/Src/LCD/spi_ili9341.c <==
#include "LCD/spi_ili9341.h"
#include "main.h"
#include "stdbool.h"
#include "LCD/font8.h"    // Додати інші шрифти зробивши їх h файлами

void TFT9341_SendData(uint8_t dt)
{
	DC_DATA();
	HAL_SPI_Transmit (&hspi2, &dt, 1, 5000);
}

void TFT9341_SendCommand(uint8_t cmd)
{
  DC_COMMAND();
  HAL_SPI_Transmit (&hspi2, &cmd, 1, 5000);
}

static void TFT9341_WriteData(uint8_t* buff, size_t buff_size)
{
	DC_DATA();
	while(buff_size > 0)
	{
		uint16_t chunk_size = buff_size > 32768 ? 32768 : buff_size;
		HAL_SPI_Transmit(&hspi2, buff, chunk_size, HAL_MAX_DELAY);
		buff += chunk_size;
		buff_size -= chunk_size;
	}
}

void TFT9341_FillRect(uint16_t x1, uint16_t y1, uint16_t x2, uint16_t y2, uint16_t color)
{

	uint32_t i, n, cnt, buf_size;
		if(x1>x2) swap(x1,x2);
		if(y1>y2) swap(y1,y2);
	  TFT9341_SetAddrWindow(x1, y1, x2, y2);
	  DC_DATA();
	  n = (x2-x1+1)*(y2-y1+1)*2;
	  if(n<=8192)
	  {
	    cnt = 1;
	    buf_size = n;
	  }
	  else
	  {
	    cnt = n/2;
	    buf_size = 2;
	    for(i = 8; i < n/8; i++)
	    {
	      if(n%i == 0)
	      {
	        cnt = i;
	        buf_size = n/i;
	        break;
	      }
	    }
	  }
	  for(i = 0; i < buf_size/2; i++)
	  {
	    frm_buf[i*2] = color >> 8;
	    frm_buf[i*2+1] = color & 0xFF;
	  }
	  dma_spi_cnt = cnt;
	  HAL_SPI_Transmit_DMA(&hspi2, frm_buf, buf_size);
	  while(!dma_spi_fl) {}
	  dma_spi_fl=0;

	/////////////////////////////////////
	// Without DMA
//  if((x1 >= TFT9341_WIDTH) || (y1 >= TFT9341_HEIGHT) || (x2 >= TFT9341_WIDTH) || (y2 >= TFT9341_HEIGHT)) return;
//	if(x1>x2) swap(x1,x2);
//	if(y1>y2) swap(y1,y2);
//  TFT9341_SetAddrWindow(x1, y1, x2, y2);
//  uint8_t data[] = { color >> 8, color & 0xFF };
//  DC_DATA();
//  for(uint32_t i = 0; i < (x2-x1+1)*(y2-y1+1); i++)
//  {
//      HAL_SPI_Transmit(&hspi2, data, 2, HAL_MAX_DELAY);
//  }
}
