==> egorserebro/lautonomous_aboratory_power_supply/test_G0/Core/Src/spi_ili9341.c <==
#include "main.h"
#include "spi_ili9341.h"
#include "stm32g0xx_it.h"
#include "gpio.h"
#include "dma.h"
#include <stddef.h>
#include "font24.c"
#include "font20.c"
#include "font16.c"
#include "font12.c"
#include "font8.c"

static void TFT9341_WriteData(uint8_t* buff, size_t buff_size) {
	DC_DATA();
	while(buff_size > 0) {
		uint16_t chunk_size = buff_size > 32768 ? 32768 : buff_size;
			for(int16_t i = 0;i<buff_size;i++){
				LL_SPI_TransmitData8(SPI1, buff[i]);
				while (SPI1->SR & SPI_SR_BSY);
			}
		buff += chunk_size;
		buff_size -= chunk_size;
	}
}

void TFT9341_FillRect(uint16_t x1, uint16_t y1, uint16_t x2, uint16_t y2, uint16_t color)
{
  if((x1 >= TFT9341_WIDTH) || (y1 >= TFT9341_HEIGHT) || (x2 >= TFT9341_WIDTH) || (y2 >= TFT9341_HEIGHT)) return;
	if(x1>x2) swap(x1,x2);
	if(y1>y2) swap(y1,y2);
  TFT9341_SetAddrWindow(x1, y1, x2, y2);
  uint8_t data[] = { color >> 8, color & 0xFF };
  DC_DATA();
  for(uint32_t i = 0; i < (x2-x1+1)*(y2-y1+1); i++)
  {
				//HAL_SPI_Transmit(&hspi1, data, 2, HAL_MAX_DELAY);
				while(!(SPI1->SR & SPI_SR_TXE));
				LL_SPI_TransmitData8(SPI1, data[0]);
				while(!(SPI1->SR & SPI_SR_TXE));	
				LL_SPI_TransmitData8(SPI1, data[1]);
				
  }
}

void TFT9341_SendCommand(uint8_t cmd)
{
	DC_COMMAND();
	LL_SPI_TransmitData8(SPI1, cmd);
	while (SPI1->SR & SPI_SR_BSY);
}

void TFT9341_SendData(uint8_t dt)
{
	DC_DATA();
	LL_SPI_TransmitData8(SPI1, dt);
	while (SPI1->SR & SPI_SR_BSY);
}
